--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -8,3 +8,10 @@
     display: flex;
     justify-content: space-evenly;
 }
+
+@media (max-width: 750px){
+    .project_card{
+        width: 400px;
+        margin-top: 20px;
+    }
+}
